# MNote

./: README.md  pyproject.toml  setup.py
mnote/: __init__.py  interpreter.py  utils.py
src/mnote_lorisj/: __init__.py  interpreter.py  parser.py
tests/: test_parser.py
