[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnote_lorisj"
version = "0.0.2"

description = "A Comprehensive Tool for Parsing and Interpreting .mnote Files into LaTeX"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
  {name = "Loris Jauatkas", email = "lorisj@umich.edu" }
]

dependencies = [
  "lark-parser"
]

[project.urls]
Homepage = "https://github.com/lorisj/MNote"
Issues = "https://github.com/lorisj/MNote/issues"